--- a/quadlets/traefik/traefik.pod
+++ b/quadlets/traefik/traefik.pod
@@ -3,6 +3,9 @@ Description=Traefik Pod
 
 [Pod]
 PodName=traefik
+Network=proxy.network
+PublishPort=80:80
+PublishPort=443:443
 
 [Service]
 Restart=always
