Switch to ghcr.io for Tailscale and Jellyfin images
Rename traefik.yml to traefik.yaml and update references

Replace proxy network with traefik network for all services

Expand and reorganize TODO.md with priorities and notes

--- a/ansible/roles/traefik/files/traefik.pod
+++ b/ansible/roles/traefik/files/traefik.pod
@@ -3,7 +3,7 @@ Description=Traefik Pod
 
 [Pod]
 PodName=traefik
-Network=proxy.network
+Network=traefik.network
 PublishPort=80:80
 PublishPort=443:443
 
